# resiprocate

./: BUILD.bazel  Dockerfile  configure.ac
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install.sh  network.sh  sipp.sh
repro/: Makefile.am  Proxy.cxx  ReproRunner.cxx  RequestContext.cxx  ResponseContext.cxx  ResponseContext.hxx  Target.hxx  repro_zaleos.config
repro/monkeys/: HeaderRouteMonkey.cxx  HeaderRouteMonkey.hxx
resip/stack/: ParserContainer.hxx  SipMessage.cxx  SipMessage.hxx  TransactionMessage.hxx
rutil/: Random.cxx  SysLogBuf.cxx
sipp/: users.csv
sipp/repro_normal-0000/: uac_ua0.xml  uas_ua1.xml
sipp/repro_timer_b-0000/: uac_ua0.xml  uas_ua1.xml  uas_ua2.xml
sipp/repro_timer_c-0000/: uac_ua0.xml  uas_ua1.xml  uas_ua2.xml
sipp/repro_timer_c-0001/: uac_ua0.xml  uas_ua1.xml
